[package]
name = "mock-ellipticoin"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
description = "A framework for testing Ellipticoin smart contracts"
license = "MIT"

[dependencies]
wasm-rpc = { path = "../rust-wasm-rpc/wasm-rpc" }
ellipticoin = { path = "../rust-ellipticoin"}
secp256k1 = "0.10.0"
