[package]
name = "mock_ellipticoin"
version = "0.1.3"
authors = ["Mason Fischer <mason@kissr.co>"]
description = "A framework for testing Ellipticoin smart contracts"
license = "MIT"

[dependencies]
wasm-rpc = { path = "../rust-wasm-rpc/wasm-rpc"}
wasm-rpc-macros =  { path = "../rust-wasm-rpc/wasm-rpc-macros"}
ellipticoin = { path = "../rust-ellipticoin" }
